Refactor calculations.py and update /get_latest API Endpoint
Refactor calculations.py to not use variable name type as it shadows the builtin variable type

Update /get_latest API Endpoint in main.py with optional Query Parameter chip_id which defaults to "esp11609738"

--- a/templates/root.html
+++ b/templates/root.html
@@ -69,7 +69,7 @@
         });
     });
 
-    // Function tp go through the requested JSON file and update the fields
+    // Function to go through the requested JSON file and update the fields
     function jsonParse(data)
     {
         var pressures = ["pressure", "pressure_ASL"]
