--- a/app/views/root.html
+++ b/app/views/root.html
@@ -19,10 +19,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <meta name="theme-color" content="#7952b3">
 
-        <style>
-            .uiButton {}
-            .uiButtonActive {}
-        </style>
+
 
     </head>
 
@@ -72,8 +69,8 @@
     // Function to go through the requested JSON file and update the fields
     function jsonParse(data)
     {
-        var pressures = ["pressure", "pressure_ASL"]
-        var to_round = ["pressure", "pressure_ASL", "temperature", "temperature_ds18b20"]
+        const pressures = ["pressure", "pressure_ASL"];
+        const to_round = ["pressure", "pressure_ASL", "temperature", "temperature_ds18b20"];
         const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: "numeric",
             minute: "numeric", second: "numeric",};
 
@@ -85,7 +82,7 @@
                 val = val.toFixed(2)
             }
             if (key === "time") {
-                var new_time = new Date(val)
+                const new_time = new Date(val);
                 val = new_time.toLocaleString('de-DE', options).replace("um", "-")
 
             }
